--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,10 +3,13 @@
 <head>
 	<meta charset="UTF-8">
     	<link rel="stylesheet" href="/assets/css/normalize.css" type="text/css" />
-		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+		<link rel="stylesheet" href="/assets/css/styles.css" type="text/css" />
 		<title>MVC With Burgers!</title>
-		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="/public/assets/js/burgerPublic.js"></script>
+		<script
+  src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+  crossorigin="anonymous"></script>
+		<script src="/assets/js/burgerPublic.js"></script>
 	</head>
 	<body>
 		{{{ body }}}
