--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,10 +1,22 @@
 <h1>Burgers!</h1>
 
-<h2>Burgers burgers burgerrs</h2>
+<h2>Burgers you can eat</h2>
 
 <ul>
   {{#each burgers}}
-<li>{{burger_name}}</li>
+    {{#unless devoured}}
+      {{> burgers/burger-block devoured=false}}
+    {{/unless}}
+  {{/each}}
+</ul>
+
+<h2>Burgers that have been eaten!</h2>
+
+<ul>
+  {{#each burgers}}
+    {{#if devoured}}
+      {{> burgers/burger-block devoured=true}}
+    {{/if}}
   {{/each}}
 </ul>
 
@@ -13,14 +25,8 @@
 
   <div class="form-group">
     <label for="ca">Burger Name:</label>
-    <input type="text" id="ca" name="name">
+    <input type="text" id="ca" name="buger_name">
   </div>
-
-  {{!-- <div class="form-group">
-    <label for="slee">Sleepy?</label><br>
-    <input type="radio" name="sleepy" value="1" checked> Sleepy!<br>
-    <input type="radio" name="sleepy" value="0"> Awake
-  </div> --}}
 
   <button type="submit">Add Burger</button>
 </form>
