finished, to do is ReadMe

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,5 +13,12 @@
 	</head>
 	<body>
 		{{{ body }}}
+		<script>    
+
+	let animationState = window.localStorage.getItem('disable-animations');
+    console.log(animationState);
+    if (animationState === "true") {
+        $(".main").addClass("no-animations");
+    }</script>
 	</body>
 </html>
