--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,32 +1,46 @@
-<h1>Burgers!</h1>
+<div class="main">
 
-<h2>Burgers you can eat</h2>
+<div class="header slide-up">
+<h1>YumBurger</h1>
 
+</div>
+
+<div class="column-left slide-left-1">
+    <h2>Burgers you can eat</h2>
 <ul>
+
   {{#each burgers}}
     {{#unless devoured}}
-      {{> burgers/burger-block devoured=false}}
+     <div class="burger-item">{{> burgers/burger-block devoured=false}}</div> 
     {{/unless}}
   {{/each}}
 </ul>
+</div>
 
-<h2>Burgers that have been eaten!</h2>
-
+<div class="column-right slide-left-2">
+    <h2>Burgers that have been eaten!</h2>
 <ul>
+
   {{#each burgers}}
     {{#if devoured}}
-      {{> burgers/burger-block devoured=true}}
+      <div class="burger-item">{{> burgers/burger-block devoured=true}}</div>
     {{/if}}
   {{/each}}
 </ul>
+</div>
 
+
+<div class="sidebar slide-left-3">
 <h2>Add a Burger</h2>
 <form class="create-form">
-
   <div class="form-group">
-    <label for="ca">Burger Name:</label>
-    <input type="text" id="ca" name="buger_name">
+    {{!-- <label for="ca">Burger Name:</label> --}}
+    <input type="text" id="ca" name="buger_name" placeholder="Enter Burger Name" 
+onfocus="this.placeholder = ''"
+onblur="this.placeholder = 'Enter Burger Name'" >
   </div>
-
-  <button type="submit">Add Burger</button>
+  <button type="submit" class="eat-button"><div class="text">Add Burger</div></button>
 </form>
+</div>
+
+</div>
