--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -40,6 +40,12 @@ onfocus="this.placeholder = ''"
 onblur="this.placeholder = 'Enter Burger Name'" >
   </div>
   <button type="submit" class="eat-button"><div class="text">Add Burger</div></button>
+  <div class="error-group" style="display:none;">
+    error-group
+    <div class="errors">
+      errors
+    </div>
+  </div>
 </form>
 </div>
 
