--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,14 @@
 <div class="main">
 
 <div class="header slide-up">
+  <div>
 <h1>YumBurger</h1>
-
+  <button class="eat-button" id="reset" style="text-align: center;"><div class="text">Reset Tables</div></button>
+  </div>
 </div>
 
 <div class="column-left slide-left-1">
-    <h2>Burgers you can eat</h2>
+    <h2>Fresh burgers</h2>
 <ul>
 
   {{#each burgers}}
@@ -18,7 +20,7 @@
 </div>
 
 <div class="column-right slide-left-2">
-    <h2>Burgers that have been eaten!</h2>
+    <h2>Devoured burgers</h2>
 <ul>
 
   {{#each burgers}}
@@ -31,7 +33,7 @@
 
 
 <div class="sidebar slide-left-3">
-<h2>Add a Burger</h2>
+<h2>New burger</h2>
 <form class="create-form">
   <div class="form-group">
     {{!-- <label for="ca">Burger Name:</label> --}}
@@ -40,12 +42,6 @@ onfocus="this.placeholder = ''"
 onblur="this.placeholder = 'Enter Burger Name'" >
   </div>
   <button type="submit" class="eat-button"><div class="text">Add Burger</div></button>
-  <div class="error-group" style="display:none;">
-    error-group
-    <div class="errors">
-      errors
-    </div>
-  </div>
 </form>
 </div>
 
