--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,6 +19,11 @@
     console.log(animationState);
     if (animationState === "true") {
         $(".main").addClass("no-animations");
-    }</script>
+		$("#reset").show();
+    }
+	else {
+	$("#reset").hide();
+	}
+		</script>
 	</body>
 </html>
